--- a/index.html
+++ b/index.html
@@ -394,36 +394,45 @@
             cursor: pointer;
         }
 
-        /* Styles généraux pour la barre de navigation */
-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    background-color: rgba(30, 30, 40, 0.9);
-    padding: 20px 0;
-    width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-}
+    /* Responsivité pour téléphone */
+        @media only screen and (max-width: 768px) {
+            body {
+                background-attachment: scroll;
+            }
 
-/* Réduire la taille de la barre de navigation sur les téléphones */
-@media only screen and (max-width: 768px) {
-    nav {
-        flex-direction: row;  /* S'assurer que les boutons restent sur la même ligne */
-        gap: 10x;  /* Réduire l'écart entre les boutons */
-        padding: 10px 0;  /* Réduire le padding vertical */
-    }
+            nav {
+                gap: 10px;
+                padding: 8px 0;
+            }
 
-    nav a {
-        padding: 5px 10px;  /* Réduire le padding des boutons */
-        font-size: 14px;  /* Réduire la taille de la police pour les téléphones */
-    }
-}
+            nav a {
+                padding: 10px 20px;
+                font-size: 12px;
+            }
 
+            .search-container {
+                flex-direction: column;
+                gap: 10px;
+                width: 90%;
+                margin: 0 auto;
+            }
+
+            .game {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+
+            .game img {
+                max-width: 100%;
+                height: auto;
+            }
+
+            footer {
+                font-size: 14px;
+                padding: 10px;
+            }
+        }
     </style>
 
 <body>
